Bug 164640 - List bullets formatting changed
Summary: List bullets formatting changed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.1
Keywords: bibisected, bisected, regression
: 164697 164726 164935 165268 165407 (view as bug list)
Depends on:
Blocks: Bullet-Number-Outline-Lists
  Show dependency treegraph
 
Reported: 2025-01-09 15:51 UTC by Gabor Kelemen (Collabora)
Modified: 2025-02-25 19:11 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
The document in current 25.8 master and 24.2 (368.82 KB, image/png)
2025-01-09 15:51 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-01-09 15:51:32 UTC
Created attachment 198451 [details]
The document in current 25.8 master and 24.2

This is related to bug 163598

When attachment 197213 [details] is opened in Impress, the bullets in the upper box are all dots, but in older versions the second level had endash, see at the top of the attachment 197214 [details].

1. Open attachment 197213 [details]
-> the bb paragraph has a bullet symbol instead of endash symbol.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 540d6349ac675e98c73166392cabbfcca8a6fc5b
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

Seems to have started with
https://git.libreoffice.org/core/+/76319347a83aecee7a423a614d67287182b31b00%5E%21
author	Noel Grandin <noel.grandin@collabora.co.uk>	Mon Oct 21 09:26:31 2024 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Tue Oct 22 08:01:03 2024 +0200

set stylesheet parent at creation time

avoids a bunch of broadcasting.

a similar mega-master-page scenario as reported in tdf#158773

adding CC to: Noel Grandin
Comment 1 Aron Budea 2025-01-14 05:34:48 UTC
Confirmed in LO 25.8.0.0.alpha0+ (72df5a6fdf3e14d9994ebd1de269ab712136a27a) / Windows.
Comment 2 Aron Budea 2025-01-14 22:37:22 UTC
The same can be seen if you create a new presentation, and open View -> Master Slide. As I reported in bug 164697, the font also changes from Liberation Sans to Liberation Serif.
Comment 3 Aron Budea 2025-01-14 22:37:52 UTC
*** Bug 164697 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2025-01-20 11:11:39 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ef5a350b75b8ff31dce6fa016d6ca8b920164a9f

tdf#164640 List bullets formatting changed

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Octavio Alvarez 2025-01-31 12:59:13 UTC
*** Bug 164935 has been marked as a duplicate of this bug. ***
Comment 6 Octavio Alvarez 2025-02-06 01:32:50 UTC
I suggest this be backported to 25.2. It is an easily noticeable bug. This report is about bullets but the bug more than just bullets as I described in duplicate #164935. Not sure if this is the right place to discuss this.
Comment 7 Commit Notification 2025-02-06 09:13:20 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/aa1d053b844f3f3413302848a9a680ec213b28dd

tdf#164640 List bullets formatting changed

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Saburo 2025-02-21 05:16:59 UTC
*** Bug 165268 has been marked as a duplicate of this bug. ***
Comment 9 Saburo 2025-02-24 02:01:55 UTC
*** Bug 165407 has been marked as a duplicate of this bug. ***
Comment 10 Octavio Alvarez 2025-02-24 15:16:32 UTC
*** Bug 164726 has been marked as a duplicate of this bug. ***
Comment 11 Commit Notification 2025-02-25 15:16:17 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3aa4d993063a3f871f8f509ba81274a356d0dda0

tdf#164640: sd_import_tests2: Add unittest

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Mihai Vasiliu 2025-02-25 15:58:42 UTC
Thanks Xisco for the unit test!
Comment 13 Commit Notification 2025-02-25 19:11:16 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3f3ec465e14bf55a53bf795f07c1da7527d092aa

tdf#164640: improve unittest

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.