tdf#164640 List bullets formatting changed

revert part of
    commit 76319347a83aecee7a423a614d67287182b31b00
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Mon Oct 21 09:26:31 2024 +0200
    set stylesheet parent at creation time

Change-Id: Iabbfabc1412af54b76c0ac04d2e887a15a4cbbad
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180499
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit ef5a350b75b8ff31dce6fa016d6ca8b920164a9f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180505
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>